tests/build/impl_ui_node_macro/fail/delegate_iter_items_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
   --> $DIR/delegate_iter_items_not_ui_node.rs:9:69
    |
9   | #[impl_ui_node(delegate_iter: self.inner.iter(), delegate_iter_mut: self.inner.iter_mut())]
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_iter_mut<'a>(d: impl IntoIterator<Item = &'a mut impl UiNode>) -> impl IterMutImpl {
    |                                                                           ------ required by this bound in `delegate_iter_mut`

error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
   --> $DIR/delegate_iter_items_not_ui_node.rs:9:31
    |
9   | #[impl_ui_node(delegate_iter: self.inner.iter(), delegate_iter_mut: self.inner.iter_mut())]
    |                               ^^^^^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_iter<'a>(d: impl IntoIterator<Item = &'a impl UiNode>) -> impl IterImpl {
    |                                                                   ------ required by this bound in `delegate_iter`
